# stack

./: README.md  main.c  stack.c  stack.h
test/: CMakeLists.txt
